...
    <string name="identity_attachments_error">Failed to link or unlink attachments to the identity</string>
    <string name="create_identity_item_creation_error">Could not create identity</string>
    <string name="create_identity_item_creation_success">Identity created</string>
    <string name="update_identity_item_creation_success">Identity updated</string>
    <string name="update_identity_item_creation_error">Could not update identity</string>
    <!--  Common create items  -->
    <string name="title_create">Create</string>
    <string name="changes_saved">Changes saved</string>
    <!--  TOTP  -->
    <string name="totp_create_login_field_title">2FA secret key (TOTP)</string>
    <string name="totp_create_login_field_invalid">Invalid 2FA secret key (TOTP)</string>
    <string name="totp_create_login_field_placeholder">Add 2FA secret key (TOTP)</string>
    <string name="close_scree_icon_content_description">Close screen button</string>
    <string name="totp_paste_code_action">Paste code</string>
    <string name="totp_scan_code_action">Scan code</string>
    <string name="field_cannot_be_empty">This field cannot be empty</string>
    <string name="camera_permission_explanation">Camera permission required for this feature to be available.</string>
    <string name="camera_permission_open_settings">Open settings</string>
    <!--  TOTP limit  -->
...
